# dit168

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md
cmake/: FindValgrind.cmake
doc/Architecture/: README.md  SAD.tex
doc/KnowledgeAcquisition/: .knowledgeAcquisitionIMU.tex.swp  LaTeX Basics.md  knowledgeAcquisitionIMU.tex
doc/Project Management/Vision/: Vision.tex
doc/ProjectManagement/: README.md
doc/ProjectManagement/FinalReport/: FinalReport.tex
doc/ProjectManagement/ProjectPlan/: ProjectPlan.tex
doc/ProjectManagement/Vision/: Vision.tex
doc/Risk Management/: README.md  risk_management.tex
doc/RiskManagement/: RiskMap.ods  RiskMap.xls  risk_management.tex
doc/Sprint Presentations/: Template.pptx
doc/Sprint Retrospectives/: Template.docx
doc/SprintRetrospectives/Sprint1-2/: Sprint1-2.tex
doc/SprintRetrospectives/Sprint3/: Sprint3.tex
doc/SprintRetrospectives/Sprint4/: Sprint4.tex
doc/SprintRetrospectives/Sprint5/: Sprint5.tex
doc/SprintRetrospectives/Sprint6/: .Sprint6.tex.swp  Sprint6.tex
doc/Team Management/: Initial Work Process.docx
doc/TeamManagement/WorkProcess/: WorkProcess.tex
doc/UserManual/: README.md  UserManual.tex
safety_check/: Dockerfile  Example.cpp  compiling.md  terminal_controller.cpp
security_check/: Dockerfile.armhf  Example.cpp  README.md  compiling.md  docker-compose.yml
src/: CMakeLists.txt  README.md  docker-compose.yml  main.cpp
src/FirstSub/Communicator/: CMakeLists.txt  Communicator.cpp  Dockerfile  NumModifier.cpp  NumModifier.hpp  TestNumModifier.cpp  messages.cpp  messages.odvd
src/FirstSub/Receiver/: CMakeLists.txt  Dockerfile  Receiver.cpp
src/FirstSub/Sender/: CMakeLists.txt  Dockerfile  NumModifier.cpp  NumModifier.hpp  Sender.cpp  TestNumModifier.cpp
src/IMU/: CMakeLists.txt  Dockerfile.armhf  README.md  Testacceleration.cpp  TestyawDegrees.cpp  acceleration.cpp  acceleration.hpp  docker-compose.yml  imu.cpp  imu.hpp  main.cpp  messages.odvd  yawDegrees.cpp  yawDegrees.hpp
src/IMU/IMU_onCar/: CMakeLists.txt  Testacceleration.cpp  TestyawDegrees.cpp  acceleration.cpp  imu.cpp  runner  yawDegrees.cpp  yawDegrees.hpp
src/maneuvering/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf  maneuvering.cpp  maneuvering.h  maneuvering.hpp  messages.odvd
src/terminal_controller/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf  README  changes.md  docker-compose.yml  messages.odvd  terminal_controller.cpp
src/ultrasonic/: CMakeLists.txt  Dockerfile.armhf  Makefile  main.cpp  ultrasonic.c
src/ultrasonic/src/: messages.odvd  ultrasonic.cpp
src/web-interface/: Dockerfile.amd64  Dockerfile.armhf  docker-compose.yml
src/web-interface/src/: NavKeys.js  imu.js  index.html  libcluon-viewer-0.01.js  messages.odvd  nav_keys.js  style.css  ultrasonic.js
terminal_controller/: Dockerfile.armhf  docker-compose.yml  messages.odvd
test/: CMakeLists.txt  README.md  Testacceleration.cpp  TestyawDegrees.cpp
web-interface/: Dockerfile  Dockerfile.amd64  Dockerfile.armhf  NavKeys.js  docker-compose.yml  index.html  libcluon-viewer-0.01.js  package.json  proto_decode.js  server.js  style.css
web-interface/Controller/: CMakeLists.txt  Controller.cpp
web-interface/src/: NavKeys.js  index.html  libcluon-viewer-0.01.js  messages.odvd  style.css  test.js
